2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Select uninitialized keep alive modules.

2010-07-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not mark async modules as unknown.

2010-07-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm, bin/pandora_server: Added a real unknown
	  status.

2010-07-28  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/PredictionServer.pm: Fixed problem that pandora
	server daemon is aborted by division by zero, if numeric data to
	predict are mostly 0.

2010-07-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Make sure delete_pending is set to 0
	  when selecting keepalive modules.

	* lib/PandoraFMS/DataServer.pm: Do not read more than max_queue_files
	  files. Suppressed some warnings.

2010-07-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Removed a misplaced parenthesis.

2010-07-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not compress data for async modules.

	* lib/PandoraFMS/DataServer.pm: Check that the file exists before
	  trying to parse the XML to avoid XML::Simple error messages.

2010-07-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Sort files by creation date before
	  queuing them. Fixes bug #3031780.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Add extended information when saving
	  an SNMP trap to a module.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Delete the spool/pandora directory
	  if no agent is installed on the same machine.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Set safer permissions for data_in/conf.

	* util/pandora_db.pl: Fixed the setup password regular expression.
	  Fixes bug #3026997.

2010-07-19  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/make_deb_package.sh,
	  pandora_server_installer,
	  pandora_server.spec: Set proper permission for the md5 and